--- a/mail-template/remindViewer.pug
+++ b/mail-template/remindViewer.pug
@@ -3,7 +3,7 @@ html(xmlns="http://www.w3.org/1999/xhtml")
     head
         meta(http-equiv="Content-Type" content="text/html; charset=utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
-        title Welcome to Spred !
+        title Rappel: Votre cast debute bientôt
     body(bgcolor="#ffffff" style="margin: 0; padding: 0")
         table(width="100%" border="0" cellpadding="0" cellspacing="0")
             tr
@@ -20,9 +20,13 @@ html(xmlns="http://www.w3.org/1999/xhtml")
                                             a(href='http://spred.tv/@' + username + '' style='color: #55AA55') @#{username} !
                                     tr
                                         td(style="padding: 30px 0 0 0")
-                                            | Merci de vous être inscrit sur la plateforme&nbsp;
-                                            a(href='http://spred.tv' style='color: #55AA55') spred.tv
-                                            | &nbsp;! Nous esperons que vous apprécierez cette experience.
+                                            p
+                                                | Le cast:
+                                                a(href='http://spred.tv/casts/' + cast_url + '' style="color: #55AA55;") #{cast_name}
+                                                | auquel vous souhaitiez assister débute dans quelques minutes, nous vous invitons dès à présent à vous connecter à celui-ci
+                                                | afin de ne pas en manquer une miete !
+                                            p   Bon visionage !
+
                                     tr
                                         td(style="padding: 10px 0 0 0; font-style: italic; text-align: right;")
                                             | L'équipe Spred
