Update mail templates

--- a/mail-template/welcome.pug
+++ b/mail-template/welcome.pug
@@ -16,13 +16,15 @@ html(xmlns="http://www.w3.org/1999/xhtml")
                             td(style="padding: 40px 30px 40px 30px;")
                                 table(width="100%")
                                     tr
-                                        td Bonjour
-                                            a(href='http://spred.tv/@' + username + '' style='color: #55AA55') @#{username} !
+                                        td
+                                            = 'Bonjour '
+                                            a(href='http://spred.tv/@' + username + '' style='color: #55AA55')= '@' + username
+                                            = ' !'
                                     tr
                                         td(style="padding: 30px 0 0 0")
-                                            | Merci de vous être inscrit sur la plateforme&nbsp;
+                                            = 'Merci de vous être inscrit sur la plateforme '
                                             a(href='http://spred.tv' style='color: #55AA55') spred.tv
-                                            | &nbsp;! Nous esperons que vous apprécierez cette experience.
+                                            = ' ! Nous esperons que vous apprécierez cette experience.'
                                     tr
                                         td(style="padding: 10px 0 0 0; font-style: italic; text-align: right;")
                                             | L'équipe Spred
