--- a/mail-template/remindCaster.pug
+++ b/mail-template/remindCaster.pug
@@ -16,15 +16,17 @@ html(xmlns="http://www.w3.org/1999/xhtml")
                             td(style="padding: 40px 30px 40px 30px;")
                                 table(width="100%")
                                     tr
-                                        td Bonjour
-                                            a(href='http://spred.tv/@' + username + '' style='color: #55AA55') @#{username} !
+                                        td
+                                            = 'Bonjour '
+                                            a(href='http://spred.tv/@' + username + '' style='color: #55AA55')= '@' + username
+                                            = ' !'
                                     tr
                                         td(style="padding: 30px 0 0 0")
                                             p
-                                                | Votre cast:
-                                                a(href='http://spred.tv/casts/' + cast_url + '' style="color: #55AA55;") #{cast_name}
-                                                | est prévus dans moins de 15 minutes, nous vous invitons à vous connecter à celui-ci
-                                                | et vous préparer à début votre présentation !
+                                                = 'Votre cast "'
+                                                a(href='http://spred.tv/casts/' + cast_url + '' style="color: #55AA55;")= cast_name
+                                                = '" est prévus dans moins de 15 minutes, nous vous invitons à vous connecter à celui-ci '
+                                                = ' et vous préparer à début votre présentation ! '
                                             p   Bon courage !
 
                                     tr
