--- a/mail-template/remindViewer.pug
+++ b/mail-template/remindViewer.pug
@@ -16,16 +16,19 @@ html(xmlns="http://www.w3.org/1999/xhtml")
                             td(style="padding: 40px 30px 40px 30px;")
                                 table(width="100%")
                                     tr
-                                        td Bonjour
-                                            a(href='http://spred.tv/@' + username + '' style='color: #55AA55') @#{username} !
+                                        td
+                                            = 'Bonjour '
+                                            a(href='http://spred.tv/@' + username + '' style='color: #55AA55')= '@' + username
+                                            = ' !'
                                     tr
                                         td(style="padding: 30px 0 0 0")
                                             p
-                                                | Le cast:
-                                                a(href='http://spred.tv/casts/' + cast_url + '' style="color: #55AA55;") #{cast_name}
-                                                | auquel vous souhaitiez assister débute dans quelques minutes, nous vous invitons dès à présent à vous connecter à celui-ci
-                                                | afin de ne pas en manquer une miete !
-                                            p   Bon visionage !
+                                                = 'Le cast "'
+                                                a(href='http://spred.tv/casts/' + cast_url + '' style="color: #55AA55;")= cast_name
+                                                = '" auquel vous souhaitiez assister débute dans quelques minutes, nous vous invitons dès à présent à vous connecter à celui-ci'
+                                                = ' afin de ne pas en perdre une miete !'
+                                            p
+                                                = 'Bon visionage !'
 
                                     tr
                                         td(style="padding: 10px 0 0 0; font-style: italic; text-align: right;")
